samples/_failures_safe/1761241681_09508a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ebcc8de.c: In function ‘main’:
./samples/SAFE/__tmp_9ebcc8de.c:157:9: error: expected declaration or statement at end of input
  157 |         input[len - 1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_9ebcc8de.c:157:9: error: expected declaration or statement at end of input
